--- a/eggGame/style.css
+++ b/eggGame/style.css
@@ -9,3 +9,21 @@
   background-size: cover;
   background-repeat: no-repeat;
 }
+#score{
+  width: 120px;
+  height: 40px;
+  position: absolute;
+  border: 2px solid;
+  top:20px;
+  left:900;
+  font-size: 30px;
+}
+#life{
+  width: 120px;
+  height: 40px;
+  position: absolute;
+  border: 2px solid;
+  top:20px;
+  left:20;
+  font-size: 30px;
+}
