--- a/eggGame/style.css
+++ b/eggGame/style.css
@@ -27,3 +27,21 @@
   left:20;
   font-size: 30px;
 }
+#eggSpeed{
+  width: 165px;
+  height: 40px;
+  position: absolute;
+  border: 2px solid;
+  top:20px;
+  left:141;
+  font-size: 30px;
+}
+#bucketSpeed{
+  width: 130px;
+  height: 40px;
+  position: absolute;
+  border: 2px solid;
+  top:20px;
+  left:769;
+  font-size: 30px;
+}
